--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,11 @@
 	  "-e", "DATA_PATH=/data",
 	  "-v", "/c/GitHub/data:/data"
 	],
+	"extensions": [
+	  "ms-python.python",
+	  "ms-python.black-formatter",
+	  "ms-python.pylint"
+	]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
