--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ pandas==2.2.3
 peewee==3.17.8
 pillow==11.0.0
 platformdirs==4.3.6
-plotly==5.24.1
+plotly>=6.1.2
 pylint==3.3.3
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
